# hybrid_marker_track

./: .gitignore  CMakeLists.txt  LICENCE  README.md
config/: Settings.xml
include/: ippe.h  track_helper.h
src/: ippe.cpp  main.cpp  track_helper.cpp
src/libchessdetector/: CMakeLists.txt  chess_detector.cpp  chess_detector.h  chess_features.cpp  chess_features.h  coord_types.h  corner_detect.cpp  corner_detect.h  feature_orientation.cpp  feature_orientation.h  non_max_sup_pts.cpp  non_max_sup_pts.h
src/libpatterntracker/: CMakeLists.txt  circlesgrid.cpp  circlesgrid.hpp  tracker.cpp  tracker.h  tracker_curvedot.cpp  tracker_curvedot.h  tracker_keydot.cpp  tracker_keydot.h
